// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    15
     
    expenses
     totalling 
    $5,129,732,179.90
  </h1>
</div>
`;

exports[`should correctly ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $129.90
  </h1>
</div>
`;
